hephaestus.org/program.output

state 0
	$accept: .list $end 
	list: .    (1)

	.  reduce 1 (src line 40)

	list  goto 1

state 1
	$accept:  list.$end 
	list:  list.stat2 '\n' 
	list:  list.function '\n' 

	$end  accept
	DIGIT  shift 13
	LETTER  shift 5
	TYPE_VOID  shift 10
	TYPE_INT  shift 11
	TYPE_STRING  shift 12
	'-'  shift 8
	'('  shift 7
	.  error

	expr  goto 4
	number  goto 9
	stat2  goto 2
	function  goto 3
	type  goto 6

state 2
	list:  list stat2.'\n' 

	'\n'  shift 14
	.  error


state 3
	list:  list function.'\n' 

	'\n'  shift 15
	.  error


state 4
	stat2:  expr.    (12)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	'|'  shift 22
	'&'  shift 21
	'+'  shift 16
	'-'  shift 17
	'*'  shift 18
	'/'  shift 19
	'%'  shift 20
	.  reduce 12 (src line 69)


state 5
	stat2:  LETTER.'=' expr 
	expr:  LETTER.    (23)

	'='  shift 23
	.  reduce 23 (src line 97)


state 6
	function:  type.functionName '(' ')' '{' '}' 

	LETTER  shift 25
	.  error

	functionName  goto 24

state 7
	expr:  '('.expr ')' 

	DIGIT  shift 13
	LETTER  shift 27
	'-'  shift 8
	'('  shift 7
	.  error

	expr  goto 26
	number  goto 9

state 8
	expr:  '-'.expr 

	DIGIT  shift 13
	LETTER  shift 27
	'-'  shift 8
	'('  shift 7
	.  error

	expr  goto 28
	number  goto 9

state 9
	expr:  number.    (24)
	number:  number.DIGIT 

	DIGIT  shift 29
	.  reduce 24 (src line 99)


state 10
	type:  TYPE_VOID.    (5)

	.  reduce 5 (src line 53)


state 11
	type:  TYPE_INT.    (6)

	.  reduce 6 (src line 53)


state 12
	type:  TYPE_STRING.    (7)

	.  reduce 7 (src line 53)


state 13
	number:  DIGIT.    (25)

	.  reduce 25 (src line 102)


state 14
	list:  list stat2 '\n'.    (2)

	.  reduce 2 (src line 41)


state 15
	list:  list function '\n'.    (3)

	.  reduce 3 (src line 42)


state 16
	expr:  expr '+'.expr 

	DIGIT  shift 13
	LETTER  shift 27
	'-'  shift 8
	'('  shift 7
	.  error

	expr  goto 30
	number  goto 9

state 17
	expr:  expr '-'.expr 

	DIGIT  shift 13
	LETTER  shift 27
	'-'  shift 8
	'('  shift 7
	.  error

	expr  goto 31
	number  goto 9

state 18
	expr:  expr '*'.expr 

	DIGIT  shift 13
	LETTER  shift 27
	'-'  shift 8
	'('  shift 7
	.  error

	expr  goto 32
	number  goto 9

state 19
	expr:  expr '/'.expr 

	DIGIT  shift 13
	LETTER  shift 27
	'-'  shift 8
	'('  shift 7
	.  error

	expr  goto 33
	number  goto 9

state 20
	expr:  expr '%'.expr 

	DIGIT  shift 13
	LETTER  shift 27
	'-'  shift 8
	'('  shift 7
	.  error

	expr  goto 34
	number  goto 9

state 21
	expr:  expr '&'.expr 

	DIGIT  shift 13
	LETTER  shift 27
	'-'  shift 8
	'('  shift 7
	.  error

	expr  goto 35
	number  goto 9

state 22
	expr:  expr '|'.expr 

	DIGIT  shift 13
	LETTER  shift 27
	'-'  shift 8
	'('  shift 7
	.  error

	expr  goto 36
	number  goto 9

state 23
	stat2:  LETTER '='.expr 

	DIGIT  shift 13
	LETTER  shift 27
	'-'  shift 8
	'('  shift 7
	.  error

	expr  goto 37
	number  goto 9

state 24
	function:  type functionName.'(' ')' '{' '}' 

	'('  shift 38
	.  error


state 25
	functionName:  LETTER.    (8)

	.  reduce 8 (src line 56)


state 26
	expr:  '(' expr.')' 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	'|'  shift 22
	'&'  shift 21
	'+'  shift 16
	'-'  shift 17
	'*'  shift 18
	'/'  shift 19
	'%'  shift 20
	')'  shift 39
	.  error


state 27
	expr:  LETTER.    (23)

	.  reduce 23 (src line 97)


state 28
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  '-' expr.    (22)

	.  reduce 22 (src line 95)


state 29
	number:  number DIGIT.    (26)

	.  reduce 26 (src line 111)


state 30
	expr:  expr.'+' expr 
	expr:  expr '+' expr.    (15)
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	'*'  shift 18
	'/'  shift 19
	'%'  shift 20
	.  reduce 15 (src line 81)


state 31
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr '-' expr.    (16)
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	'*'  shift 18
	'/'  shift 19
	'%'  shift 20
	.  reduce 16 (src line 83)


state 32
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr '*' expr.    (17)
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	.  reduce 17 (src line 85)


state 33
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr '/' expr.    (18)
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	.  reduce 18 (src line 87)


state 34
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr '%' expr.    (19)
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	.  reduce 19 (src line 89)


state 35
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr '&' expr.    (20)
	expr:  expr.'|' expr 

	'+'  shift 16
	'-'  shift 17
	'*'  shift 18
	'/'  shift 19
	'%'  shift 20
	.  reduce 20 (src line 91)


state 36
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 
	expr:  expr '|' expr.    (21)

	'&'  shift 21
	'+'  shift 16
	'-'  shift 17
	'*'  shift 18
	'/'  shift 19
	'%'  shift 20
	.  reduce 21 (src line 93)


state 37
	stat2:  LETTER '=' expr.    (13)
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'%' expr 
	expr:  expr.'&' expr 
	expr:  expr.'|' expr 

	'|'  shift 22
	'&'  shift 21
	'+'  shift 16
	'-'  shift 17
	'*'  shift 18
	'/'  shift 19
	'%'  shift 20
	.  reduce 13 (src line 73)


state 38
	function:  type functionName '('.')' '{' '}' 

	')'  shift 40
	.  error


state 39
	expr:  '(' expr ')'.    (14)

	.  reduce 14 (src line 79)


state 40
	function:  type functionName '(' ')'.'{' '}' 

	'{'  shift 41
	.  error


state 41
	function:  type functionName '(' ')' '{'.'}' 

	'}'  shift 42
	.  error


state 42
	function:  type functionName '(' ')' '{' '}'.    (4)

	.  reduce 4 (src line 45)

Rule not reduced: instrList:  
Rule not reduced: instrList:  instrList instr 
Rule not reduced: instr:  LETTER '=' DIGIT 

22 terminals, 10 nonterminals
27 grammar rules, 43/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
59 working sets used
memory: parser 26/240000
17 extra closures
95 shift entries, 1 exceptions
19 goto entries
8 entries saved by goto default
Optimizer space used: output 66/240000
66 table entries, 0 zero
maximum spread: 22, maximum offset: 23
